--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,4 +1,8 @@
+Options +FollowSymLinks
+IndexIgnore */*
 RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
+# if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule . index.php [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+# otherwise forward it to index.php
+RewriteRule . index.php
